[tool.poetry]
name = "dojo-pep8"
version = "0.1.0"
description = ""
authors = ["Jairo Salazar <jairos1301@gmail.com>"]
readme = "README.md"
packages = [{include = "dojo_pep8"}]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.17.4"
autopep8 = "^2.0.2"
pre-commit = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
